minor clean up; dates; travis -> gh CI